# hackerrank

./: LICENSE  compile_and_run.txt
DP/bricks-game/: CMakeLists.txt  bricks-game.cpp  output10.txt
DP/coin-change/: CMakeLists.txt  main.cpp
DP/stockmax/: CMakeLists.txt  stockmax.cpp
DP/substring-diff/: substring-diff.cpp
DP/uknapsack/: CMakeLists.txt  sample.txt  uknapsack.cpp
Data Structures/find-maximum-index-product/: CMakeLists.txt  find-maximum-index-product.cpp
Data Structures/unique-colors/: CMakeLists.txt  adj2ml.py  input01.txt  input02.txt  input03.txt  output01.txt  output02.txt  output03.txt  unique-colors.cpp
Dynamic Programming/bricks-game/: sample.txt
Dynamic Programming/maxsubarray/: CMakeLists.txt  maxsubarray.cpp
Dynamic Programming/stockmax/: input05.txt  test01.txt
Dynamic Programming/strplay/: .strplay.cpp.swo  CMakeLists.txt  input06.txt  strplay.cpp
Dynamic Programming/substring-diff/: CMakeLists.txt
Dynamic Programming/the-indian-job/: CMakeLists.txt  contents.txt  the-indian-job.cpp  the-indian-job.cpp.bad
bricks-game/: CMakeLists.txt  bricks-game.cpp
challenges/sherlock-and-valid-string/: CMakeLists.txt  sherlock-and-valid-string.2.cpp  sherlock-and-valid-string.cpp
coin-change/: CMakeLists.txt  main.cpp
interval-selection/: CMakeLists.txt  interval-selection.cpp
maxsubarray/: CMakeLists.txt  maxsubarray.cpp
stockmax/: CMakeLists.txt  stockmax.cpp  test02.txt
substring-diff/: CMakeLists.txt  substring-diff.cpp
template/: CMakeLists.txt  main.cpp  main.py
uknapsack/: CMakeLists.txt  uknapsack.cpp
(+186 files in other folders)
